[package]
name = "lemonade-change"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon="1.4.1" # uncomment me and comment line above to disable logs for better performances
itertools="*"
rand="*"
diam={git="https://github.com/wagnerf42/diam"}
